apply changes commanded by refaster + fix build errors
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/block-based-task-partitioning@38719 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c